--- a/src/MA/UserBundle/Resources/views/User/BGPhotos.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/BGPhotos.html.twig
@@ -25,6 +25,11 @@
 			        <!-- END nav admin -->
 
 				  	<div id="section_admin" class="row center">
+				  		<div class="row">
+				  			<p class="center italic">
+		    					Si les photos ne s'affichent pas correctement, rafraîchir la page.
+		    				</p>
+				  		</div>
 						<div class="row">
 				    		{% if BGPhotos|length > 0 %}
 								<div class="table-responsive">
