--- a/src/MA/UserBundle/Resources/views/User/articles.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/articles.html.twig
@@ -39,7 +39,7 @@
 													<a href="javascript:displaySelectedArticle('{{ path('ma_user_article_spe', {'articleId':single_article.id}) }}', 'article_n_{{ single_article.id }}')" class="no_style_a">
 														{{ single_article.title|truncate(40, false, '...') }}
 														<span class="float-right arrow_article">
-															<img src="{{ asset('img/system/defaults/right_arrow.png') }}" alt=""/>
+															<img src="{{ asset('img/system/defaults/right_arrow_spe.png') }}" alt=""/>
 														</span>
 														<span class="float-right date_article">
 															{% if single_article.createdAt|length > 0 %}
@@ -81,11 +81,13 @@
 												{% if articleAsked.alt|length > 0  and articleAsked.url|length > 0 %}
 													<div class="article_photo_container">
 														<div class="article_photo_admin" style="width: 100%; min-height:100px; background-image: url('{{ asset( articleAsked.webPath) }}'); background-size: cover; background-position: 50%;" alt="{{ articleAsked.alt }}" onClick="showPhotoCarousel('{{ asset(articleAsked.webPath) }}')">
+									                    	<img src="{{ asset('img/system/content/pin_pics.png') }}" alt="Pin" class="pin_article"/>
 									                    </div>
 													</div>
 							                   {% else %}
 													<div class="article_photo_container">
 								                   		<div class="article_photo_admin" style="width: 100%; min-height:100px; background-image: url('{{ asset('img/system/defaults/default_article_photo.png') }}'); background-size: cover; background-position: 50%;" alt="Default" onClick="showPhotoCarousel('{{ asset('img/system/defaults/default_article_photo.png') }}')">
+									                    	<img src="{{ asset('img/system/content/pin_pics.png') }}" alt="Pin" class="pin_article"/>
 									                    </div>
 													</div>
 							                   {% endif %}
