--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -2215,10 +2215,11 @@ body.modal-open {
 	padding: 2px 5px ;
 }
 .btn-choice-admin:hover {
-	background-color: rgba(150,150,150,0.6);
+	background-color: rgba(150,150,150,0.3);
 }
 .nav_tabs_user li.active {
 	background-color: rgba(150,150,150,0.6);
+	box-shadow: none;
 }
 .logout-btn-admin:hover {
 	background-color: rgba(200,79,86,0.6) !important;
@@ -2345,9 +2346,11 @@ body.modal-open {
 	margin-top: 4px;
 	margin-bottom: 4px;
 	padding: 5px;
+	border: 1px solid transparent;
+	border-radius: 4px;
 }
 .li_element_active {
-	border: 1px solid rgba(22,54,110,0.5);
+	border: 1px solid rgba(22,54,110,0.5) !important;
 	background-color: rgba(22,54,110,0.1);
 }
 .li_element_active a {
