--- a/src/MA/UserBundle/Resources/views/User/partners.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/partners.html.twig
@@ -117,11 +117,11 @@
 				                            <th class="center hover_popup">
 				                            	{% if partner.status %}
 				                              		{% if partner.status == "active" %}
-				                              			Active
+				                              			Actif
 				                              		{% elseif partner.status == "toCome" %}
 				                              			A venir
 				                              		{% elseif partner.status == "inactive" %}
-				                              			Inactive
+				                              			Inactif
 				                              		{% else %}
 				                              			Erreur
 				                              			<span class="italic">
