--- a/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -1299,7 +1299,9 @@
 					    					</div>
 					    					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-8">
 					    						<h4 class="left">
-					    							{{ single_person.name }} <button class="no_style_button button_besoin_info" type="button" data-toggle="collapse" data-target="#showDescription_{{ single_person.id }}" aria-expanded="false" aria-controls="showDescription_{{ single_person.id }}">En savoir plus ></button>
+					    							{{ single_person.name }}  
+					    							{% if single_person.age|length > 0 %}({{ single_person.age }}) {% endif %}
+					    							<button class="no_style_button button_besoin_info" type="button" data-toggle="collapse" data-target="#showDescription_{{ single_person.id }}" aria-expanded="false" aria-controls="showDescription_{{ single_person.id }}">En savoir plus ></button>
 					    						</h4>
 					    						<div class="row">
 													<div class="collapse" id="showDescription_{{ single_person.id }}">
@@ -1387,6 +1389,15 @@
 																				<strong>
 																					{{ single_project.deliveryAt|date('d M Y') }} 
 																				</strong>
+																			</div>
+																		</div>
+																		<br/>
+																		<div class="row">
+																			<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 left">
+																				<strong>
+																					Description :
+																				</strong> <br/>
+																				{{ single_project.description|raw }} 
 																			</div>
 																		</div>
 															  		</div>
