--- a/src/MA/UserBundle/Resources/views/User/nosBesoins.html.twig
+++ b/src/MA/UserBundle/Resources/views/User/nosBesoins.html.twig
@@ -55,7 +55,7 @@
 										{% for single_person in persons %}
 											<li class="element_link {% if single_person == elementAsked %}li_element_active{% endif %}" id="person_n_{{ single_person.id }}" style="background-color: #{{ single_person.bgColor }}">
 												<a href="javascript:displaySelectedElement('{{ path('ma_user_nosBesoins_elementAjax', {'elementType':'beneficiaires', 'elementId':single_person.id}) }}', 'person_n_{{ single_person.id }}')" class="no_style_a">
-													{{ single_person.name|truncate(40, false, '...') }}
+													{{ single_person.name|truncate(25, false, '...') }}
 												</a>
 												<span class="float-right arrow_element">
 													<img src="{{ asset('img/system/defaults/right_arrow_spe.png') }}" alt=""/>
@@ -102,9 +102,10 @@
 								                   {% endif %}
 						    					</div>
 						    					<div class="col-lg-9 col-md-9 col-sm-9 col-xs-8">
-						    						<h5 class="left">
-						    							{{ elementAsked.name }}
-						    						</h5>
+						    						<h4 class="left">
+						    							{{ elementAsked.name }} 
+						    							{% if elementAsked.age|length > 0 %}({{ elementAsked.age }}) {% endif %}
+						    						</h4>
 						    						<div class="row">
 														{{ elementAsked.description|raw }}
 						    						</div>
@@ -348,6 +349,15 @@
 																	</strong>
 																</div>
 															</div>
+															<br/>
+															<div class="row">
+																<div class="col-lg-12 col-md-12 col-sm-12 col-xs-12 left">
+																	<strong>
+																		Description :
+																	</strong>
+																	{{ elementAsked.description|raw }} 
+																</div>
+															</div>
 												  		</div>
 													</div>
 												</div>
@@ -379,7 +389,7 @@
 										{% for single_project in projects %}
 											<li class="element_link {% if single_project == elementAsked %}li_element_active{% endif %}" id="project_n_{{ single_project.id }}" style="background-color: #{{ single_project.forPerson.bgColor }}">
 												<a href="javascript:displaySelectedElement('{{ path('ma_user_nosBesoins_elementAjax', {'elementType':'projets', 'elementId':single_project.id}) }}', 'project_n_{{ single_project.id }}')" class="no_style_a">
-													{{ single_project.title|truncate(40, false, '...') }}
+													{{ single_project.title|truncate(25, false, '...') }}
 												</a>
 												<span class="float-left arrow_element_opp">
 													<img src="{{ asset('img/system/defaults/left_arrow_spe.png') }}" alt=""/>
