--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -16,10 +16,21 @@
 
     <link rel="icon" type="image/ico" href="{{ asset('favicon.ico') }}" />
 
+    <meta name="msvalidate.01" content="CC1F6862C60F3FE59348108B42D19AC7" />
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
-    <meta content="Site de Mission Andina" name="description"/>
     <meta content="Pierre-Arnaud Destremau" name="author"/>
+    <meta content="Mission Andina" name="title"/>
+    <meta content="Site de Mission Andina. Dernières informations, projets et besoins pour l'association. N'hésitez pas à y faire un tour." name="description"/>
+    <meta content="http://www.missionandina.org{{ asset('img/system/logo/logo_300x300.png') }}" name="image"/>
+
+    <!-- Facebook -->
+    <meta property="og:title" content="Mission Andina"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:image" content="http://www.missionandina.org{{ asset('img/system/logo/logo_300x300.png') }}"/>
+    <meta property="og:url" content="http://www.missionandina.org/"/>
+    <meta property="og:description" content="Site de Mission Andina. Dernières informations, projets et besoins pour l'association. N'hésitez pas à y faire un tour."/>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.1/jquery-ui.min.js"></script>
