--- a/app/Resources/views/index_base.html.twig
+++ b/app/Resources/views/index_base.html.twig
@@ -22,11 +22,18 @@
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
     <meta content="Pierre-Arnaud Destremau" name="author"/>
     <meta content="Mission Andina" name="title"/>
+    <meta content="contact@missionandina.org" name="email"/>
     <meta content="Site de Mission Andina. Dernières informations, projets et besoins pour l'association. N'hésitez pas à y faire un tour." name="description"/>
     <meta content="http://www.missionandina.org{{ asset('img/system/logo/logo_300x300.png') }}" name="image"/>
+    <meta content="C-19, Calle las Orquideas" name="streetAddress"/>
+    <meta content="Cusco" name="addressLocality"/>
+    <meta content="Cuzco" name="addressRegion"/>
+    <meta content="Peru" name="addressCountry"/>
+    <meta name="keywords" content="mission, andina, cusco, peru, larapa, san, sebsatian, association, associatif, aides, jeunes, rues, professionnelles, insertion, etudes, loyer, universite, ecoles, subventions, apurimac, pere, christian, aude, antoine, benedicte, herve, penfentenyo"/>
 
     <!-- Facebook -->
     <meta property="og:title" content="Mission Andina"/>
+    <meta property="og:email" content="contact@missionandina.org"/>
     <meta property="og:type" content="website"/>
     <meta property="og:image" content="http://www.missionandina.org{{ asset('img/system/logo/logo_300x300.png') }}"/>
     <meta property="og:url" content="http://www.missionandina.org/"/>
