--- a/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/MA/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -631,7 +631,7 @@
 								</div>
 							</div>
 
-							<div class="slide_content row" id="slide_content_Ecoliers">
+							<div class="slide_content slide_content_text" id="slide_content_Ecoliers">
 
 								<div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 board_parent">
 									<div style="width: 100%; background-image: url('{{ asset('img/system/content/board_ecoliers.png') }}'); background-size: 100% 100%; background-position: 50%;" alt="Ardoise" class="board_ecoliers italic">
@@ -875,7 +875,7 @@
 								</div>
 							</div>
 
-							<div class="slide_content" id="slide_content_Etudiants">
+							<div class="slide_content slide_content_text" id="slide_content_Etudiants">
 								<div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 board_parent">
 									<div style="width: 100%; background-image: url('{{ asset('img/system/content/board_etudiants.png') }}'); background-size: 100% 100%; background-position: 50%;" alt="Tableau" class="board_etudiants italic">
 										{% if pages|length > 0 %}
@@ -1119,7 +1119,7 @@
 								</div>
 							</div>
 
-							<div class="slide_content" id="slide_content_JeunesPro">
+							<div class="slide_content slide_content_text" id="slide_content_JeunesPro">
 								<div class="col-lg-5 col-md-6 col-sm-12 col-xs-12 board_parent">
 									<div style="width: 100%; background-image: url('{{ asset('img/system/content/board_jeunesPros.png') }}'); background-size: 100% 100%; background-position: 50%;" alt="Tableau" class="board_jeunesPros italic">
 										{% if pages|length > 0 %}
