--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -1163,7 +1163,7 @@ hr {
 	}
 }
 .slide_content_text {
-	border: 1px solid rgba(12,28,57,1);
+	/*border: 1px solid rgba(12,28,57,1);*/
 }
 
 #sessionFlash {
